--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/react-router": "^5.0.3",
     "@types/react-router-dom": "^4.3.5",
     "antd": "^3.23.2",
+    "axios": "^0.19.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
@@ -23,5 +24,6 @@
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "typescript": "^3.6.2"
-  }
+  },
+  "proxy":"http://54.180.32.185:3000/"
 }
