--- a/package.json
+++ b/package.json
@@ -3,18 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullcalendar/bootstrap": "^4.3.0",
+    "@fullcalendar/core": "^4.3.1",
+    "@fullcalendar/daygrid": "^4.3.0",
+    "@fullcalendar/interaction": "^4.3.0",
+    "@fullcalendar/react": "^4.3.0",
+    "@fullcalendar/rrule": "^4.3.0",
+    "@types/moment": "^2.13.0",
+    "@types/react-big-calendar": "^0.22.3",
     "@types/react-router": "^5.0.3",
     "@types/react-router-dom": "^4.3.5",
     "antd": "^3.23.2",
     "axios": "^0.19.0",
+    "cross-env": "^6.0.3",
+    "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
+    "react-big-calendar": "^0.22.1",
     "react-dom": "^16.9.0",
+    "react-icons": "^3.7.0",
+    "react-loadable": "^5.5.0",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts-ts": "3.1.0"
+    "react-scripts-ts": "3.1.0",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "rrule": "^2.6.2",
+    "sass-loader": "^8.0.0"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
+    "start": "cross-env NODE_ENV=src react-scripts-ts start",
+    "build": "cross-env NODE_ENV=src react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
   },
@@ -23,7 +42,10 @@
     "@types/node": "^12.7.4",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "cross-env": "^6.0.3",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
     "typescript": "^3.6.2"
   },
-  "proxy":"http://54.180.32.185:3000/"
+  "proxy": "http://54.180.32.185:3000/"
 }
