--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fullcalendar/rrule": "^4.3.0",
     "@types/moment": "^2.13.0",
     "@types/react-big-calendar": "^0.22.3",
+    "@types/react-redux": "^7.1.5",
     "@types/react-router": "^5.0.3",
     "@types/react-router-dom": "^4.3.5",
     "antd": "^3.23.2",
