--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^16.9.0",
     "react-icons": "^3.7.0",
     "react-loadable": "^5.5.0",
+    "react-quill": "^1.3.3",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts-ts": "3.1.0",
