--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-big-calendar": "^0.22.1",
+    "react-cookie": "^4.0.1",
     "react-dom": "^16.9.0",
     "react-icons": "^3.7.0",
     "react-loadable": "^5.5.0",
