--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "react": "^16.9.0",
     "react-big-calendar": "^0.22.1",
     "react-cookie": "^4.0.1",
+    "react-dnd": "^10.0.2",
+    "react-dnd-html5-backend": "^10.0.2",
+    "react-dnd-touch-backend": "^10.0.2",
     "react-dom": "^16.9.0",
+    "react-drag-drop-container": "^6.1.1",
     "react-icons": "^3.7.0",
     "react-loadable": "^5.5.0",
     "react-quill": "^1.3.3",
